--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  direction: rtl;
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -22,9 +26,11 @@ body{
   background: linear-gradient(to right, #2c3e50, #2980b9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.intro header {
+.container {
   width: 80%;
   margin: auto;
+}
+.intro header {
   padding-top: 25px;
   height: 40px;
   display: flex;
@@ -32,17 +38,7 @@ body{
   align-items: center;
 }
 
-.intro header::after {
-  content: '';
-  position: fixed;
-  width: 100%;
-  color: red;
-  height: 3px;
-
-}
-
 .intro .logo {
-  margin-left: 10px;
   text-align: center;
   position: relative;
 }
@@ -50,19 +46,19 @@ body{
 .intro .logo p {
   position: absolute;
   top: 25px;
-  left: 20px;
+  left: 35px;
   font-weight: 400;
 }
 
 .intro .nav-links {
   display: flex;
   flex-direction: row;
-  padding-right: 50px;
+  padding-left: 50px;
 }
 
 .intro .nav-links li {
   list-style: none;
-  margin-right: 10px;
+  margin-left: 15px;
   
 }
 
@@ -71,4 +67,8 @@ body{
   color: white;
 }
 
+/* ------------------------------------ */
+.intro .container .intro-body .bio {
+
+}
 /* End Intro */
